fix missing padding in file upload widget

--- a/app/components/widgets/FileUploadWidget.scss
+++ b/app/components/widgets/FileUploadWidget.scss
@@ -18,6 +18,7 @@
   border: solid 1px $color-light-grey;
   display: flex;
   align-items: center;
+  padding: 10px;
 }
 
 .instructions {
